--- a/css/style-hw11.css
+++ b/css/style-hw11.css
@@ -88,7 +88,7 @@ display: block;
   }
   main{
     height: 600px;
-    background-image:conic-gradient( green,yellow, red);
+    background-image:conic-gradient( green,yellow, red, purple);
 }
 
 footer{
